[package]
name = "apex-broadcast-companion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
futures = "0.3.30"
prost = "0.12.6"
prost-types = "0.12.6"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.11.0"
tungstenite = "0.21.0"

[build-dependencies]
tonic-build = "0.11.0"
